catch_panic/ui_tests/fail/invalid_default.stderr
error: unexpected token
 --> ui_tests/fail/invalid_default.rs:5:25
  |
5 | #[catch_panic(default = "magic fairy dust")]
  |                         ^^^^^^^^^^^^^^^^^^
